# sphinx-riddle-whisper

./: .gitignore  .gitmodules  .yarnrc.yml  LICENSE  README.ja.rst  README.rst  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  tox.toml
.github/: dependabot.yml
.github/workflows/: check-documents.yml  ci.yml  codeql.yml  dependabot-automerge.yml  publish-to-pypi.yml  test-matrix.yml  zizmor.yml
docs/: conf.py  glossary.rst  index.rst
docs/superpowers/plans/: 2026-06-17-footnote-popup.md  2026-06-19-image-popup-lightbox.md  2026-06-22-adversarial-review-fixes.md
docs/superpowers/specs/: 2026-06-15-glossary-popup-design.md  2026-06-17-footnote-popup-design.md  2026-07-08-code-scanning-alerts-design.md
src/sphinx_riddle_whisper/: __init__.py  collect.py  config.py  inject.py  rebase.py  render.py  runtime_config.py  sanitize.py
src/sphinx_riddle_whisper/static/: riddle-init.js  riddle.css  riddle.js
tests/: conftest.py  test_assets.py  test_build_dirhtml.py  test_build_min.py  test_build_parallel_incremental.py  test_build_singlehtml.py  test_build_xss.py  test_code_scanning_alert_fixes.py  test_collect.py  test_config.py  test_image_popup_build.py  test_init.py  test_inject.py  test_inject_integration.py  test_inject_nested.py  test_inject_term_id_xss.py  test_packaging.py  test_rebase.py  test_render.py  test_render_partial_poc.py  test_runtime_config.py  test_sanitize.py  test_workflows.py
tests/js/: derive-term-id.test.mjs  dummy.test.mjs  footnote-popover.test.mjs  get-template.test.mjs  image-lightbox.test.mjs  install-popover.test.mjs  lint-rules-fire.test.mjs  mark-term-triggers.test.mjs  nested-popover.test.mjs  position.test.mjs  retarget-links.test.mjs  riddle-config.test.mjs  riddle-css.test.mjs  sanitize-fragment.test.mjs  table-align-css.test.mjs  term-mark-css.test.mjs
tests/js/fixtures/: dangerous-urls.js  needs-sanitizer.js  unsafe-dynamic-code.js
tests/roots/test-context/: conf.py  index.rst
tests/roots/test-image-popup/: conf.py  index.rst
tests/roots/test-min/: conf.py  index.rst
tests/roots/test-nested/: both.rst  conf.py  glossary.rst  glossary2.rst  index.rst
tests/roots/test-pages/: conf.py  deepref.rst  index.rst  rootref.rst  topic.rst
tests/roots/test-pages/deep/: glossary.rst
tests/roots/test-pages/subdir/: other.rst
tests/roots/test-xss/: conf.py  index.rst
